# streamlit-desktop

./: README.md  app.py  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: build.yml
streamlit_desktop/: streamlit_app.py
streamlit_desktop/pgs/: config.py  keyring.py  upload.py
